add comment and like to feginclient