@@ -13,11 +13,12 @@
 
 package com.f4.user.client;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+
 /**
 * Utilities to support Swagger encoding formats in Feign.
 */
@@ -84,12 +85,15 @@ public final class EncodingUtils {
    * @return The URL encoded string representation of the parameter. If the
    *         parameter is null, returns null.
    */
-
   public static String encode(Object parameter) {
     if (parameter == null) {
       return null;
     }
-    return URLEncoder.encode(parameter.toString(), StandardCharsets.UTF_8).replace("+", "%20");
+    try {
+      return URLEncoder.encode(parameter.toString(), "UTF-8").replaceAll("\\+", "%20");
+    } catch (UnsupportedEncodingException e) {
+      // Should never happen, UTF-8 is always supported
+      throw new RuntimeException(e);
+    }
   }
-
 }
